# sokoban

./: CMakeLists.txt  Makefile  README.md  environment.sh  experiments.py  extract_walls.py  main.cpp  run.py  sokoban.cpp  sokoban.h  test_greedy_astar.py  test_hungarian_astar.py  test_interface.py  test_random.py  timing.sh  train_dqn.py
qlearning/: __init__.py  gbfs_evaluator.py  output_manager.py  parameters.py  qlearning.py  sokoban_environment.py  transition_collector.py
qlearning_weights/: convolution_network_1.torch  convolution_network_2.torch  convolution_network_2.weights
sokoban/: Makefile  __init__.py  compile.py  sokoban.cpp  sokoban.h  sokoban_interface.pyx
sokoban/environment/: Makefile  __init__.py  compile.py  sokoban.cpp  sokoban.h  sokoban_interface.pyx
sokoban/heuristics/: HungarianHeuristic.py  __init__.py  base.py  euclid.py  greedy.py  hungarian.py  manhattan.py  qlearning.py
sokoban/search/: __init__.py  astar.py  batch_astar.py
walls/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+382 more)
